@@ -30,6 +30,7 @@ Changes from versions 3.0.* to version 3.1.0:
   cf http://gmplib.org/list-archives/gmp-devel/2010-September/001642.html).
 - The mpfr_add_one_ulp and mpfr_sub_one_ulp macros (which are obsolete and
   no more documented) will be removed in a future release.
+- Speed improvement for the mpfr_sqr function using Mulders' algorithm.
 - Bug fixes.
 
 Changes from versions 2.4.* to version 3.0.0:
